--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.5.0",
     "geist": "^1.3.0",
     "gsap": "^3.12.7",
     "lucide-react": "^0.479.0",
