--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.5.0",
     "geist": "^1.3.0",
     "gsap": "^3.12.7",
@@ -46,10 +47,12 @@
     "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.4.6",
     "nodemailer": "^6.10.0",
+    "puppeteer": "^24.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.2",
     "react-modal": "^3.16.3",
+    "recharts": "^2.15.1",
     "server-only": "^0.0.1",
     "sonner": "^2.0.1",
     "superjson": "^2.2.1",
