--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "next": "^15.0.1",
     "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.4.6",
+    "node-cron": "^4.1.0",
     "nodemailer": "^6.10.0",
     "puppeteer": "^24.4.0",
     "puppeteer-core": "^24.9.0",
