--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "next-themes": "^0.4.6",
     "node-cron": "^4.1.0",
     "nodemailer": "^6.10.0",
+    "progress": "^2.0.3",
     "puppeteer": "^24.4.0",
     "puppeteer-core": "^24.9.0",
     "react": "^18.3.1",
